--- a/src/Nav/_variables.scss
+++ b/src/Nav/_variables.scss
@@ -21,4 +21,4 @@ $nav-pills-link-active-color:       $component-active-color !default;
 $nav-pills-link-active-bg:          $component-active-bg !default;
 
 $nav-divider-color:                 theme-color("gray", "background") !default;
-$nav-divider-margin-y:              $spacer / 2 !default;
+$nav-divider-margin-y:              calc($spacer / 2) !default;
